--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/babel-preset-app": "^3.1.1",
     "color-convert": "^1.9.3",
     "davclient.js": "^0.1.0",
+    "debounce-promise": "^3.1.0",
     "exports-loader": "^0.7.0",
     "html-to-text": "^4.0.0",
     "ical.js": "^1.3.0",
