--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: required
 dist: trusty
 language: php
 php:
-  - 7.0
   - 7.1
   - 7.2
 
@@ -31,7 +30,7 @@ env:
 
 matrix:
   include:
-    - php: 7.0
+    - php: 7.1
       env: "DB=mysql CORE_BRANCH=master TEST_JS=TRUE"
     - php: 7.1
       env: "DB=mysql CORE_BRANCH=master PACKAGE=TRUE"
@@ -39,8 +38,10 @@ matrix:
       env: "DB=pgsql PHP_COVERAGE=TRUE"
     - php: 7.0
       env: "DB=pgsql CORE_BRANCH=stable15"
+    - php: 7.1
+      env: "DB=pgsql CORE_BRANCH=v15.0.0"
     - php: 7.2
-      env: "DB=pgsql PHP_COVERAGE=v15.0.0RC1 "
+      env: "DB=pgsql PHP_COVERAGE=TRUE"
   fast_finish: true
 
 branches:
