--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,18 @@
 	},
 	"require": {
 		"php": ">=7.0.13",
-		"pear-pear.horde.org/Horde_Date": "^2.4.1@stable",
-		"pear-pear.horde.org/Horde_Exception": "^2.0.8@stable",
-		"pear-pear.horde.org/Horde_Imap_Client": "^2.29.16@stable",
-		"pear-pear.horde.org/Horde_Mail": "^2.6.4@stable",
-		"pear-pear.horde.org/Horde_Mime": "^2.11.0@stable",
-		"pear-pear.horde.org/Horde_Nls": "^2.2.1@stable",
-		"pear-pear.horde.org/Horde_Stream": "^1.6.3@stable",
-		"pear-pear.horde.org/Horde_Support": "^2.2.0@stable",
-		"pear-pear.horde.org/Horde_Text_Filter": "^2.3.5@stable",
-		"pear-pear.horde.org/Horde_Text_Flowed": "^2.0.3@stable",
-		"pear-pear.horde.org/Horde_Util": "^2.5.8@stable",
-		"pear-pear.horde.org/Horde_Smtp": "^1.9.5@stable",
+		"pear-pear.horde.org/horde_date": "^2.4.1@stable",
+		"pear-pear.horde.org/horde_exception": "^2.0.8@stable",
+		"pear-pear.horde.org/horde_imap_client": "^2.29.16@stable",
+		"pear-pear.horde.org/horde_mail": "^2.6.4@stable",
+		"pear-pear.horde.org/horde_mime": "^2.11.0@stable",
+		"pear-pear.horde.org/horde_nls": "^2.2.1@stable",
+		"pear-pear.horde.org/horde_stream": "^1.6.3@stable",
+		"pear-pear.horde.org/horde_support": "^2.2.0@stable",
+		"pear-pear.horde.org/horde_text_filter": "^2.3.5@stable",
+		"pear-pear.horde.org/horde_text_flowed": "^2.0.3@stable",
+		"pear-pear.horde.org/horde_util": "^2.5.8@stable",
+		"pear-pear.horde.org/horde_smtp": "^1.9.5@stable",
 		"cerdic/css-tidy": "v1.6.5",
 		"ezyang/htmlpurifier": "4.10.0",
 		"kwi/urllinker": "dev-default",
