--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
   global:
   - CORE_BRANCH=master
   - TEST_JS=FALSE
+  - LINT_JS=FALSE
   - PHP_COVERAGE=FALSE
   - PACKAGE=FALSE
   - NIGHTLY=FALSE
@@ -32,7 +33,7 @@ env:
 matrix:
   include:
     - php: 7.1
-      env: "DB=mysql CORE_BRANCH=master TEST_JS=TRUE"
+      env: "DB=mysql CORE_BRANCH=master TEST_JS=TRUE LINT_JS=TRUE"
     - php: 7.1
       env: "DB=mysql CORE_BRANCH=master PACKAGE=TRUE"
     - php: 7.1
@@ -111,6 +112,9 @@ script:
   # Run JS tests
   - sh -c "if [ '$TEST_JS' = 'TRUE' ]; then npm test; fi"
   # - sh -c "if [ '$TEST_JS' = 'TRUE' ]; then cat ./coverage/*/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi"
+
+  # Run JS lint
+  - sh -c "if [ '$LINT_JS' = 'TRUE' ]; then npm run lint; fi"
 
   # Run PHP tests
   - composer run test
