--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "webpack --progress --watch --config webpack.dev.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:autofix": "eslint --ext .js,.vue src --fix",
-    "test": "mocha-webpack --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\"",
-    "test:watch": "mocha-webpack -w --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\""
+    "test": "mochapack --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\"",
+    "test:watch": "mochapack -w --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\""
   },
   "dependencies": {
     "@vue/babel-preset-app": "^3.5.5",
@@ -23,6 +23,7 @@
     "ical.js": "^1.3.0",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
+    "mochapack": "^1.1.1",
     "moment": "^2.24.0",
     "nextcloud-axios": "^0.1.3",
     "nextcloud-server": "^0.15.9",
@@ -65,7 +66,6 @@
     "jsdom": "^14.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
-    "mocha-webpack": "^2.0.0-beta.0",
     "node-sass": "^4.11.0",
     "prettier": "1.16.4",
     "sass-loader": "^7.0.3",
