Test against stable15
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ services:
 
 env:
   global:
-  - CORE_BRANCH=master
+  - CORE_BRANCH=stable15
   - TEST_JS=FALSE
   - PHP_COVERAGE=FALSE
   - PACKAGE=FALSE
