--- a/.travis.yml
+++ b/.travis.yml
@@ -113,9 +113,9 @@ script:
 matrix:
   include:
     - php: 7.0
-      env: "DB=mysql CORE_BRANCH=master TEST_JS=TRUE"
+      env: "DB=mysql TEST_JS=TRUE"
     - php: 7.1
-      env: "DB=mysql CORE_BRANCH=master PACKAGE=TRUE"
+      env: "DB=mysql PACKAGE=TRUE"
     - php: 7.1
       env: "DB=pgsql PHP_COVERAGE=TRUE"
   fast_finish: true
