--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vue-slide-up-down": "^2.0.1",
     "vue-tabs-component": "^1.5.0",
     "vuex": "^3.1.3",
+    "vue-draggable": "^2.0.2",
     "vuex-router-sync": "^5.0.0"
   },
   "browserslist": [
