--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "color-convert": "^2.0.0",
     "davclient.js": "^0.1.0",
     "debounce-promise": "^3.1.2",
+    "eslint-plugin-nextcloud": "^0.1.0",
     "exports-loader": "^0.7.0",
     "html-to-text": "^5.1.1",
     "ical.js": "^1.3.0",
@@ -29,8 +30,6 @@
     "nextcloud-server": "^0.15.9",
     "nextcloud-vue": "^0.11.1",
     "nextcloud_issuetemplate_builder": "^0.1.0",
-    "remove": "^0.1.5",
-    "underscore": "^1.9.1",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-autosize": "^1.0.2",
