--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nextcloud-server": "^0.15.9",
     "nextcloud-vue": "^0.11.4",
     "nextcloud_issuetemplate_builder": "^0.1.0",
+    "printscout": "^2.0.3",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
     "vue-autosize": "^1.0.2",
