--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mochapack": "^1.1.1",
     "moment": "^2.24.0",
     "nextcloud-axios": "^0.2.0",
+    "nextcloud-dialogs": "0.0.1",
     "nextcloud-l10n": "0.0.1",
     "nextcloud-router": "0.0.5",
     "nextcloud-server": "^0.15.10",
