--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.24.0",
     "nextcloud-axios": "^0.2.0",
     "nextcloud-dialogs": "0.0.1",
+    "nextcloud-files": "0.0.1",
     "nextcloud-l10n": "0.0.1",
     "nextcloud-router": "0.0.5",
     "nextcloud-server": "^0.15.10",
