--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nextcloud-dialogs": "0.0.1",
     "nextcloud-files": "0.0.1",
     "nextcloud-l10n": "0.0.1",
+    "nextcloud-logger": "0.0.2",
     "nextcloud-router": "0.0.6",
     "nextcloud-vue": "^0.11.4",
     "nextcloud_issuetemplate_builder": "^0.1.0",
