Move away from string-based ID column as that causes problems on update
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,15 +31,19 @@ env:
 matrix:
   include:
     - php: 7.3
+      env: "DB=pgsql"
+    - php: 7.3
       env: "DB=mysql TEST_SUITE=TEST-JS"
     - php: 7.3
       env: "DB=mysql TEST_SUITE=PACKAGE"
     - php: 7.1
       env: "DB=mysql PHP_COVERAGE=TRUE"
     - php: 7.3
-      env: "DB=sqlite CORE_BRANCH=stable16"
+      env: "DB=pgsql CORE_BRANCH=stable16"
     - php: 7.3
-      env: "DB=pgsql CORE_BRANCH=v16.0.0RC1"
+      env: "DB=mysql CORE_BRANCH=v16.0.0"
+    - php: 7.3
+      env: "DB=sqlite CORE_BRANCH=v16.0.4"
   fast_finish: true
 
 branches:
