--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "vue-autosize": "^1.0.2",
     "vue-click-outside": "^1.0.7",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-m-message": "^2.0.0",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.1.3",
     "vue-scroll": "^2.1.12",
+    "vue-select": "^3.1.0",
     "vue-shortkey": "^3.1.7",
     "vue-slide-up-down": "^2.0.0",
     "vue-tabs-component": "^1.5.0",
+    "vuedraggable": "^2.23.0",
     "vuex": "^3.1.1",
     "vuex-router-sync": "^5.0.0"
   },
