--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@bundle-analyzer/webpack-plugin": "^0.5.0",
+    "@ckeditor/ckeditor5-build-balloon": "^12.4.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.2",
     "@nextcloud/auth": "^0.3.1",
     "@nextcloud/axios": "^0.4.2",
     "@nextcloud/dialogs": "^0.1.0",
