Use the new @nextcloud npm packages
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "test:watch": "mochapack -w --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\""
   },
   "dependencies": {
+    "@nextcloud/auth": "^0.1.0",
+    "@nextcloud/axios": "^0.4.0",
+    "@nextcloud/dialogs": "^0.1.0",
+    "@nextcloud/files": "^0.1.0",
+    "@nextcloud/l10n": "^0.2.0",
+    "@nextcloud/logger": "^0.1.0",
+    "@nextcloud/moment": "^0.2.0",
+    "@nextcloud/router": "^0.1.0",
     "@vue/babel-preset-app": "^3.11.0",
     "color-convert": "^2.0.1",
     "davclient.js": "^0.1.0",
@@ -26,14 +34,6 @@
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "mochapack": "^1.1.5",
-    "moment": "^2.24.0",
-    "nextcloud-auth": "0.0.3",
-    "nextcloud-axios": "^0.2.1",
-    "nextcloud-dialogs": "0.0.3",
-    "nextcloud-files": "0.0.3",
-    "nextcloud-l10n": "0.1.1",
-    "nextcloud-logger": "0.0.6",
-    "nextcloud-router": "0.0.9",
     "nextcloud-vue": "^0.12.3",
     "nextcloud_issuetemplate_builder": "^0.1.0",
     "printscout": "2.0.3",
