--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,14 @@
 	},
 	"require": {
 		"php": ">=7.2",
+		"arthurhoaro/favicon": "^1.2",
+		"cerdic/css-tidy": "v1.7.1",
+		"christophwurst/kitinerary": "^0.2",
+		"christophwurst/kitinerary-bin": "^0.2",
+		"christophwurst/kitinerary-flatpak": "^0.2",
+		"ezyang/htmlpurifier": "4.12.0",
+		"gravatarphp/gravatar": "^2.0",
+		"kwi/urllinker": "dev-bleeding",
 		"pear-pear.horde.org/horde_date": "^2.4.1@stable",
 		"pear-pear.horde.org/horde_exception": "^2.0.8@stable",
 		"pear-pear.horde.org/horde_imap_client": "^2.29.16@stable",
@@ -29,13 +37,10 @@
 		"pear-pear.horde.org/horde_text_flowed": "^2.0.3@stable",
 		"pear-pear.horde.org/horde_util": "^2.5.8@stable",
 		"pear-pear.horde.org/horde_smtp": "^1.9.5@stable",
-		"cerdic/css-tidy": "v1.7.1",
-		"ezyang/htmlpurifier": "4.12.0",
-		"kwi/urllinker": "dev-bleeding",
-		"gravatarphp/gravatar": "^2.0",
-		"arthurhoaro/favicon": "^1.2"
+		"psr/log": "^1"
 	},
 	"require-dev": {
+		"roave/security-advisories": "dev-master",
 		"christophwurst/nextcloud": "v17.0.2",
 		"christophwurst/nextcloud_testing": "0.9.1",
 		"phan/phan": "^2.0"
