--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue-autosize": "^1.0.2",
     "vue-click-outside": "^1.0.7",
     "vue-infinite-scroll": "^2.0.2",
+    "vue-material-design-icons": "^4.3.0",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.1.3",
     "vue-scroll": "^2.1.13",
