--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@bundle-analyzer/webpack-plugin": "^0.5.0",
     "@ckeditor/ckeditor5-basic-styles": "^11.1.4",
     "@ckeditor/ckeditor5-build-balloon": "^12.4.0",
-    "@ckeditor/ckeditor5-vue": "^1.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^12.0.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.5",
     "@ckeditor/ckeditor5-editor-balloon": "^12.2.2",
@@ -27,6 +26,7 @@
     "@ckeditor/ckeditor5-link": "^11.1.2",
     "@ckeditor/ckeditor5-paragraph": "^11.0.5",
     "@ckeditor/ckeditor5-theme-lark": "^14.2.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.0",
     "@nextcloud/auth": "^0.3.1",
     "@nextcloud/axios": "^0.4.2",
     "@nextcloud/dialogs": "^0.1.0",
@@ -35,6 +35,7 @@
     "@nextcloud/logger": "^0.1.0",
     "@nextcloud/moment": "^0.2.2",
     "@nextcloud/router": "^0.1.0",
+    "@nextcloud/vue": "^1.0.0",
     "@vue/babel-preset-app": "^3.12.0",
     "color-convert": "^2.0.1",
     "davclient.js": "^0.1.0",
@@ -46,7 +47,6 @@
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "mochapack": "^1.1.5",
-    "nextcloud-vue": "^0.12.6",
     "nextcloud_issuetemplate_builder": "^0.1.0",
     "postcss-loader": "^3.0.0",
     "printscout": "2.0.3",
