--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nextcloud/axios": "^0.4.2",
     "@nextcloud/dialogs": "^0.1.0",
     "@nextcloud/files": "^0.1.0",
+    "@nextcloud/initial-state": "^0.2.0",
     "@nextcloud/l10n": "^0.2.1",
     "@nextcloud/logger": "^0.1.0",
     "@nextcloud/moment": "^0.2.2",
