--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     "@nextcloud/vue": "^1.1.0",
     "@vue/babel-preset-app": "^4.0.5",
     "color-convert": "^2.0.1",
-    "davclient.js": "^0.1.0",
+    "davclient.js": "https://github.com/owncloud/davclient.js.git#0.2.1",
     "debounce-promise": "^3.1.2",
     "eslint-plugin-nextcloud": "^0.3.0",
-    "exports-loader": "^0.7.0",
     "html-to-text": "^5.1.1",
     "ical.js": "^1.3.0",
     "lodash": "^4.17.15",
