--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "core-js": "^3.4.5",
     "davclient.js": "https://github.com/owncloud/davclient.js.git#0.2.1",
     "debounce-promise": "^3.1.2",
-    "eslint-plugin-nextcloud": "^0.3.0",
     "html-to-text": "^5.1.1",
     "ical.js": "^1.3.0",
     "lodash": "^4.17.15",
@@ -74,6 +73,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@nextcloud/browserslist-config": "^1.0.0",
+    "@nextcloud/eslint-plugin": "^1.0.3",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
