--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,6 +3,19 @@ name: Lint
 on: [push]
 
 jobs:
+  xml-linters:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@master
+    - name: Download schema
+      run: wget https://apps.nextcloud.com/schema/apps/info.xsd
+    - name: Lint info.xml
+      uses: ChristophWurst/xmllint-action@v1
+      with:
+        xml-file: ./appinfo/info.xml
+        xml-schema-file: ./info.xsd
+
   php-linters:
     runs-on: ubuntu-latest
     strategy:
@@ -19,6 +32,7 @@ jobs:
         coverage: none
     - name: Lint
       run: composer run lint
+
   node-linters:
     runs-on: ubuntu-latest
     name: ESLint
