--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   },
   "dependencies": {
     "@bundle-analyzer/webpack-plugin": "^0.5.1",
-    "@ckeditor/ckeditor5-basic-styles": "^16.0.0",
-    "@ckeditor/ckeditor5-block-quote": "^16.0.0",
-    "@ckeditor/ckeditor5-build-balloon": "^16.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^15.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^15.0.0",
+    "@ckeditor/ckeditor5-build-balloon": "^15.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^12.0.5",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.5",
-    "@ckeditor/ckeditor5-editor-balloon": "^16.0.0",
-    "@ckeditor/ckeditor5-essentials": "^16.0.0",
-    "@ckeditor/ckeditor5-link": "^16.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^16.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^16.0.0",
+    "@ckeditor/ckeditor5-editor-balloon": "^15.0.0",
+    "@ckeditor/ckeditor5-essentials": "^15.0.0",
+    "@ckeditor/ckeditor5-link": "^15.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^15.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^15.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.1",
     "@nextcloud/auth": "^0.3.1",
     "@nextcloud/axios": "^0.5.0",
@@ -40,7 +40,7 @@
     "@vue/babel-preset-app": "^4.1.1",
     "color-convert": "^2.0.1",
     "core-js": "^3.4.8",
-    "davclient.js": "https://github.com/owncloud/davclient.js.git#0.2.1",
+    "davclient.js": "git+https://github.com/owncloud/davclient.js.git#0.2.1",
     "debounce-promise": "^3.1.2",
     "html-to-text": "^5.1.1",
     "ical.js": "^1.3.0",
