Add tests for the TextEditor component
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/package.json
+++ b/package.json
@@ -103,8 +103,7 @@
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
-    "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-merge": "^4.2.2"
   },
   "prettier": {
     "bracketSpacing": false,
