Fix packaging ignore config
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.nextcloudignore
+++ b/.nextcloudignore
@@ -1,37 +1,36 @@
-babel.config.js
-.babelrc
-build
-composer.*
-CONTRIBUTING.md
-coverage
-.editorconfig
-.eslintrc.js
+/babel.config.js
+/.babelrc
+/build
+/composer.*
+/CONTRIBUTING.md
+/coverage
+/.editorconfig
+/.eslintrc.js
 .git
 .gitattributes
 .github
 .gitignore
-Gruntfile.js
 .hg
-issue_template.md
-.jscsrc
-.jshintignore
-.jshintrc
-karma.conf.js
-krankerl.toml
-l10n/no-php
-.tx
-Makefile
-.nextcloudignore
-node_modules
-package.json
-package-lock.json
-.phan
-phpunit*xml
-postcss.config.js
-screenshots
+/issue_template.md
+/.jscsrc
+/.jshintignore
+/.jshintrc
+/karma.conf.js
+/krankerl.toml
+/l10n/no-php
+/.tx
+/Makefile
+/.nextcloudignore
+/node_modules
+/package.json
+/package-lock.json
+/.phan
+/phpunit*xml
+/postcss.config.js
+/screenshots
 .scrutinizer.yml
-src
-tests
+/src
+/tests
 .travis.yml
-vendor/bin
-webpack.*
+/vendor/bin
+/webpack.*
