Update Docker in the hope of getting a more stable version
Ref https://docs.travis-ci.com/user/docker/#installing-a-newer-docker-version

Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ services:
   - mysql
   - postgresql
 
+addons:
+  apt:
+    packages:
+      - docker-ce # To get the latest version
+
 env:
   global:
   - CORE_BRANCH=master
