Extract js translation strings with gettext and commit them
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Composer
 composer.phar
 /vendor/
+/translationfiles/templates/mail.pot
+/translationfiles/templates/src.pot
 
 # Mac OS
 .DS_Store
