--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
-    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
+    "l10n:extract": "node build/extract-l10n.js",
     "lint": "eslint --ext .js,.vue src",
     "lint:autofix": "eslint --ext .js,.vue src --fix",
     "test": "mochapack --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\"",
-    "test:watch": "mochapack -w --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\""
+    "test:watch": "mochapack -w --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\"",
+    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js"
   },
   "dependencies": {
     "@bundle-analyzer/webpack-plugin": "^0.5.1",
@@ -88,6 +89,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.1.2",
     "file-loader": "^5.0.2",
+    "gettext-extractor": "^3.5.2",
+    "i18next": "^19.1.0",
     "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.2.2",
