--- a/package.json
+++ b/package.json
@@ -52,16 +52,15 @@
     "nextcloud_issuetemplate_builder": "^0.1.0",
     "postcss-loader": "^3.0.0",
     "printscout": "2.0.3",
+    "ramda": "^0.27.0",
     "raw-loader": "^4.0.0",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vue-autosize": "^1.0.2",
-    "vue-click-outside": "^1.0.7",
     "vue-infinite-scroll": "^2.0.2",
     "vue-material-design-icons": "^4.4.0",
     "vue-on-click-outside": "^1.0.3",
     "vue-router": "^3.1.5",
-    "vue-scroll": "^2.1.13",
     "vue-shortkey": "^3.1.7",
     "vue-slide-up-down": "^2.0.1",
     "vue-tabs-component": "^1.5.0",
@@ -95,6 +94,7 @@
     "prettier": "1.19.1",
     "sass-loader": "^8.0.2",
     "sinon": "^8.1.1",
+    "sinon-chai": "^3.4.0",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.9.0",
     "vue-server-renderer": "^2.6.11",
