Make envelope lists more versatile
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nextcloud_issuetemplate_builder": "^0.1.0",
     "postcss-loader": "^3.0.0",
     "printscout": "2.0.3",
+    "ramda": "^0.27.0",
     "raw-loader": "^4.0.0",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
@@ -95,6 +96,7 @@
     "prettier": "1.19.1",
     "sass-loader": "^8.0.2",
     "sinon": "^9.0.0",
+    "sinon-chai": "^3.4.0",
     "url-loader": "^3.0.0",
     "vue-loader": "^15.9.0",
     "vue-server-renderer": "^2.6.11",
