--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,9 @@ before_script:
   - sh -c "if [ '$TEST_SUITE' = 'TEST-PHP' ]; then php -f core/occ app:enable mail; fi"
   # Enable app twice to check occ errors of registered commands
   - sh -c "if [ '$TEST_SUITE' = 'TEST-PHP' ]; then php -f core/occ app:enable mail; fi"
+  # Turn off TLS verification here as the test server is not trusted
+  - sh -c "if [ '$TEST_SUITE' = 'TEST-PHP' ]; then php -f core/occ config:system:set app.mail.verify-tls-peer --type bool --value false; fi"
+
   - cd core/apps/mail
   - sh -c "if [ '$TEST_SUITE' = 'TEST-JS' ]; then npm install -g npm@latest; fi"
   - sh -c "if [ '$TEST_SUITE' = 'TEST-JS' ]; then make dev-setup; fi"
