Add psalm and apply auto fixes
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
 		"roave/security-advisories": "dev-master",
 		"christophwurst/nextcloud": "v17.0.2",
 		"christophwurst/nextcloud_testing": "0.10.0",
-		"phan/phan": "^2.0"
+		"phan/phan": "^2.0",
+		"vimeo/psalm": "^3.9"
 	},
 	"scripts": {
 		"lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
