--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "sass-loader": "^8.0.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.4.0",
+    "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
     "vue-server-renderer": "^2.6.11",
