Add cs fixer config
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -43,10 +43,13 @@
 		"roave/security-advisories": "dev-master",
 		"christophwurst/nextcloud": "v17.0.2",
 		"christophwurst/nextcloud_testing": "0.10.0",
+		"nextcloud/coding-standard": "^0.1.0",
 		"phan/phan": "^2.0",
 		"vimeo/psalm": "^3.9"
 	},
 	"scripts": {
+		"cs:check": "php-cs-fixer fix --dry-run",
+		"cs:fix": "php-cs-fixer fix",
 		"lint": "find . -name \\*.php -not -path './vendor/*' -exec php -l \"{}\" \\;",
 		"phan": "phan --allow-polyfill-parser -k .phan/config.php",
 		"test:integration": "phpunit -c tests/phpunit.integration.xml tests/Integration --fail-on-warning",
