Migrate to eslint-config-nextcloud
Signed-off-by: John Molakvoæ (skjnldsv) <skjnldsv@protonmail.com>

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "NODE_ENV=production webpack --progress --hide-modules --config webpack.prod.js",
     "dev": "NODE_ENV=development webpack --config webpack.dev.js",
     "watch": "NODE_ENV=development webpack --progress --watch --config webpack.dev.js",
-    "lint": "eslint --ext .js,.vue src",
-    "lint:autofix": "eslint --ext .js,.vue src --fix",
+    "lint": "eslint --ext .js,.vue --ignore-pattern tests src",
+    "lint:fix": "eslint --ext .js,.vue --ignore-pattern tests src --fix",
     "test": "mochapack --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\"",
     "test:watch": "mochapack -w --webpack-config webpack.test.js --require src/tests/setup.js \"src/tests/**/*.spec.js\""
   },
@@ -53,6 +53,7 @@
     "printscout": "2.0.3",
     "ramda": "^0.27.0",
     "raw-loader": "^4.0.1",
+    "stylelint": "^13.6.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vue-autosize": "^1.0.2",
@@ -76,16 +77,20 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.10.3",
     "@nextcloud/browserslist-config": "^1.0.0",
+    "@nextcloud/eslint-config": "^2.0.0",
     "@nextcloud/eslint-plugin": "^1.4.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "browserslist-config-nextcloud": "0.1.0",
     "chai": "^4.2.0",
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.0.0",
     "jsdom": "^16.2.2",
@@ -93,7 +98,6 @@
     "mocha": "^7.2.0",
     "mochapack": "^1.1.15",
     "node-sass": "^4.14.1",
-    "prettier": "2.0.5",
     "sass-loader": "^8.0.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.4.0",
@@ -106,14 +110,5 @@
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
-  },
-  "prettier": {
-    "bracketSpacing": false,
-    "singleQuote": true,
-    "semi": false,
-    "useTabs": true,
-    "printWidth": 120,
-    "tabWidth": 4,
-    "trailingComma": "es5"
   }
 }
