--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
-		"christophwurst/nextcloud": "v17.0.2",
+		"christophwurst/nextcloud": "^v18.0.0",
 		"christophwurst/nextcloud_testing": "0.10.0",
 		"nextcloud/coding-standard": "^0.3.0",
 		"phan/phan": "^2.0",
