Build stable 1.3 against 19
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 
 env:
   global:
-  - CORE_BRANCH=master
+  - CORE_BRANCH=stable19
   - PHP_COVERAGE=FALSE
   - TEST_SUITE=TEST-PHP
   - DB=mysql
