Exclude lib/Vendor/ from php-cs-fixer runs
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -12,6 +12,7 @@ $config
 	->ignoreVCSIgnored(true)
 	->notPath('build')
 	->notPath('l10n')
+	->notPath('lib/Vendor')
 	->notPath('src')
 	->notPath('vendor')
 	->in(__DIR__);
