Mozartize the html purifier
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
 			"classmap_prefix": "NEXTCLOUDMAIL_",
 			"packages": [
 				"arthurhoaro/favicon",
+				"ezyang/htmlpurifier",
 				"gravatarphp/gravatar"
 			]
 		}
