Mozartize the Gravatar lib
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
 			"classmap_prefix": "NEXTCLOUDMAIL_",
 			"packages": [
 				"arthurhoaro/favicon",
+				"gravatarphp/gravatar",
 				"php-ai/php-ml"
 			]
 		}
