Add kitinerary-sys adapter
This will allow using kitinerary-extractor when it's installed on the
system but invoking our binary and flatpak fail (due to platform
incompatibilities).

Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 		"christophwurst/kitinerary": "^0.2",
 		"christophwurst/kitinerary-bin": "^0.2",
 		"christophwurst/kitinerary-flatpak": "^0.2",
+		"christophwurst/kitinerary-sys": "^0.1.0",
 		"coenjacobs/mozart": "^0.5.1",
 		"ezyang/htmlpurifier": "4.12.0",
 		"gravatarphp/gravatar": "^2.0",
