Add autoloader override for htmlpurifier
Signed-off-by: Christoph Wurst <christoph@winzerhof-wurst.at>

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,14 @@
 				"arthurhoaro/favicon",
 				"ezyang/htmlpurifier",
 				"gravatarphp/gravatar"
-			]
+			],
+			"override_autoload": {
+				"ezyang/htmlpurifier": {
+					"classmap": [
+						"library/"
+					]
+				}
+			}
 		}
 	}
 }
