--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nextcloud/router": "^1.0.2",
     "@nextcloud/vue": "^1.5.0",
     "@vue/babel-preset-app": "^4.3.1",
+    "better-queue": "^3.8.10",
     "color-convert": "^2.0.1",
     "core-js": "^3.6.5",
     "davclient.js": "git+https://github.com/owncloud/davclient.js.git#0.2.1",
