--- a/package.json
+++ b/package.json
@@ -16,6 +16,19 @@
   },
   "dependencies": {
     "@bundle-analyzer/webpack-plugin": "^0.5.1",
+    "@ckeditor/ckeditor5-alignment": "^19.0.1",
+    "@ckeditor/ckeditor5-basic-styles": "^19.0.1",
+    "@ckeditor/ckeditor5-block-quote": "^19.0.1",
+    "@ckeditor/ckeditor5-build-balloon": "^19.0.2",
+    "@ckeditor/ckeditor5-dev-utils": "^20.0.0",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^20.0.0",
+    "@ckeditor/ckeditor5-editor-balloon": "^19.0.1",
+    "@ckeditor/ckeditor5-essentials": "^19.0.1",
+    "@ckeditor/ckeditor5-heading": "^19.0.1",
+    "@ckeditor/ckeditor5-link": "^19.0.1",
+    "@ckeditor/ckeditor5-paragraph": "^19.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^19.1.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.1",
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.3.2",
     "@nextcloud/dialogs": "^1.4.0",
