--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nextcloud/moment": "^1.1.1",
     "@nextcloud/router": "^1.1.0",
     "@nextcloud/vue": "^1.5.0",
+    "@nextcloud/vue-dashboard": "^0.1.3",
     "@vue/babel-preset-app": "^4.4.6",
     "color-convert": "^2.0.1",
     "core-js": "^3.6.5",
