--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
-		"christophwurst/nextcloud": "^v18.0.0",
+		"christophwurst/nextcloud": "v20.0.0-beta1",
 		"christophwurst/nextcloud_testing": "0.10.0",
 		"nextcloud/coding-standard": "^0.3.0",
 		"phan/phan": "^3.0",
