--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ckeditor/ckeditor5-paragraph": "^22.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^22.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.2",
+    "@riophae/vue-treeselect": "^0.4.0",
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.4.0",
     "@nextcloud/dialogs": "^2.0.1",
