--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "sass-loader": "^10.0.2",
     "sinon": "^9.0.3",
     "sinon-chai": "^3.4.0",
+    "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.3",
