fix for #3693: replaced btoa and atob function by base64 library that handles utf-8 strings correctly
Signed-off-by: Patrick Bender <patrick@bender-it-services.de>

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@ckeditor/ckeditor5-paragraph": "^22.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^22.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.3",
-    "@riophae/vue-treeselect": "^0.4.0",
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.4.0",
     "@nextcloud/dialogs": "^2.0.1",
@@ -41,6 +40,7 @@
     "@nextcloud/router": "^1.2.0",
     "@nextcloud/vue": "^2.6.5",
     "@nextcloud/vue-dashboard": "^1.0.1",
+    "@riophae/vue-treeselect": "^0.4.0",
     "@vue/babel-preset-app": "^4.5.6",
     "color-convert": "^2.0.1",
     "core-js": "^3.6.5",
@@ -48,6 +48,7 @@
     "debounce-promise": "^3.1.2",
     "html-to-text": "^5.1.1",
     "ical.js": "^1.4.0",
+    "js-base64": "^3.5.2",
     "lodash": "^4.17.20",
     "md5": "^2.3.0",
     "nextcloud_issuetemplate_builder": "^0.1.0",
