--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
-		"christophwurst/nextcloud": "v20.0.0-beta1",
+		"christophwurst/nextcloud": "v20.0.0",
 		"christophwurst/nextcloud_testing": "0.10.0",
 		"nextcloud/coding-standard": "^0.3.0",
 		"phan/phan": "^3.0",
@@ -55,6 +55,8 @@
 		"cs:fix": "php-cs-fixer fix",
 		"lint": "find . -name \\*.php -not -path './vendor/*' -print0 | xargs -0 -n1 php -l",
 		"phan": "phan --allow-polyfill-parser -k .phan/config.php",
+		"psalm": "psalm",
+		"psalm:fix": "psalm --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType",
 		"post-install-cmd": [
 			"\"vendor/bin/mozart\" compose",
 			"composer dump-autoload"
