--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nextcloud/router": "^1.2.0",
     "@nextcloud/vue": "^2.8.1",
     "@nextcloud/vue-dashboard": "^1.0.1",
+    "@riophae/vue-treeselect": "^0.4.0",
     "@vue/babel-preset-app": "^4.5.8",
     "color-convert": "^2.0.1",
     "core-js": "^3.6.5",
