--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@ckeditor/ckeditor5-editor-balloon": "^23.0.0",
     "@ckeditor/ckeditor5-essentials": "^23.0.0",
     "@ckeditor/ckeditor5-heading": "^23.0.0",
+    "@ckeditor/ckeditor5-image": "^23.0.0",
     "@ckeditor/ckeditor5-link": "^23.0.0",
     "@ckeditor/ckeditor5-paragraph": "^23.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^23.0.0",
+    "@ckeditor/ckeditor5-upload": "^23.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.3",
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.4.0",
