--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,6 +28,7 @@ jobs:
       uses: shivammathur/setup-php@master
       with:
         php-version: ${{ matrix.php-versions }}
+        tools: composer:v1
         coverage: none
     - name: Lint
       run: composer run lint
@@ -42,6 +43,7 @@ jobs:
       uses: shivammathur/setup-php@master
       with:
         php-version: 7.4
+        tools: composer:v1
         coverage: none
     - name: Install dependencies
       run: composer i
@@ -59,6 +61,7 @@ jobs:
           uses: shivammathur/setup-php@master
           with:
               php-version: 7.4
+              tools: composer:v1
               extension-csv: ctype,curl,dom,gd,iconv,intl,json,mbstring,openssl,posix,sqlite,xml,zip
               coverage: xdebug
         - name: Checkout Nextcloud
