--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -16,6 +16,7 @@ jobs:
             uses: shivammathur/setup-php@master
             with:
                 php-version: 7.4
+                tools: composer:v1
                 coverage: none
           - name: Install dependencies
             run: composer i
